--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/rapier": "^1.4.0",
     "@tweenjs/tween.js": "^23.1.2",
     "@types/three": "^0.165.0",
+    "axios": "^1.7.2",
     "framer-motion": "^11.2.11",
     "gsap": "^3.12.5",
     "next": "14.2.4",
