--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "scss": "^0.2.4",
+    "sharp": "^0.33.4",
     "three": "^0.165.0",
     "zustand": "^4.5.2"
   },
