--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "@react-three/fiber": "^8.16.8",
     "@react-three/rapier": "^1.4.0",
     "@tweenjs/tween.js": "^23.1.2",
+    "@types/react-scroll": "^1.8.10",
     "@types/three": "^0.165.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.11",
-    "gsap": "^3.12.5",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll": "^1.9.0",
     "scss": "^0.2.4",
     "sharp": "^0.33.4",
-    "three": "^0.165.0",
-    "zustand": "^4.5.2"
+    "three": "^0.165.0"
   },
   "devDependencies": {
     "@types/node": "^20",
