--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
-    "@react-three/rapier": "^1.4.0",
-    "@tweenjs/tween.js": "^23.1.2",
     "@types/react-scroll": "^1.8.10",
     "@types/three": "^0.165.0",
     "axios": "^1.7.2",
@@ -23,7 +21,8 @@
     "react-scroll": "^1.9.0",
     "scss": "^0.2.4",
     "sharp": "^0.33.4",
-    "three": "^0.165.0"
+    "three": "^0.165.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
